subjects/FormalLanguages/formal_languages/lexer/tests/negative/multiline_unterminated.l
read x;

(* a comment that starts
but never ends.

write x;
